workspace = { members = [ "01-hello/helloworld", "01-hello/hellodesc", "01-hello/guessing_game", "01-hello/variable", "01-hello/datatype", "01-hello/ownership", "01-hello/struct_rd", "01-hello/enums"] }
[package]
name = "course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
