workspace = { members = [ "01-hello/helloworld", "01-hello/hellodesc", "01-hello/guessing_game", "01-hello/variable", "01-hello/datatype", "01-hello/ownership", "01-hello/struct_rd", "01-hello/enums", "02-package/backyard", "02-package/restaurant", "02-package/restaurant2", "03-collections/vectors", "03-collections/strs", "03-collections/hashmap", "04-handling/errors", "04-handling/duplication", "04-handling/lifetimes", "05-test/autotest", "05-test/integrated", "05-test/integration", "06-io/minigrep", "06-io/minigrep2", "06-io/minigrep3", "07-functional/colorshirt", "07-functional/iterators", "06-io/minigrep4", "07-functional/comparing", "08-release/doclib", "08-release/art", "11-concurrency/threadsp", "11-concurrency/messagetransfer", "11-concurrency/sharestate", "12-oop/ooplang", "12-oop/ooppattern", "12-oop/ooppattern2"] }
[package]
name = "course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
